fix for presentation