@@ -2,6 +2,7 @@ plugins {
     java
     id("org.springframework.boot") version "3.2.4"
     id("io.spring.dependency-management") version "1.1.4"
+    id("org.graalvm.buildtools.native") version "0.10.1"
 }
 
 
@@ -19,6 +20,13 @@ configurations {
     }
 }
 
+graalvmNative {
+    binaries {
+        all {
+            jvmArgs("--enable-preview")
+        }
+    }
+}
 
 
 tasks.withType<JavaCompile>().configureEach {
